--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,65 @@ h3 { font-size: 45px }
 h4 { font-size: 44px }
 h5 { font-size: 43px }
 .header {
-  background-color: #f7f7f7;
+  /* background-color: #f7f7f7; */
   margin: 0;
   padding: 0;
   min-height: 530px;
+  position: relative;
 }
+
+/* ----- svg ----  */
+
+.svg-animation-main {
+  /* border: 1px solid #fc7254; */
+  /* background-color: #f7f7f7; */
+  background-color: #eee;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+.svg-animation-main #meat {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1
+}
+/* cat */
+.svg-animation-cat {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  bottom: 0px;
+  left: 30px;
+  z-index: 2;
+}
+.svg-animation-main #cat {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  
+}
+
+/* ----------------- */
 
 .header-container { padding: 20px 0 }
 
-.header__navbar { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center }
+.header__navbar {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+   align-items: center;
+   position: relative;
+   z-index: 3;
+ }
 
 .logo {
   font-family: 'Gamja Flower', cursive;
@@ -161,7 +211,12 @@ h5 { font-size: 43px }
 
 /* greeting */
 
-.greeting { max-width: 705px; margin: 100px auto }
+.greeting {
+  max-width: 705px;
+  margin: 100px auto;
+  position: relative;
+  z-index: 3;
+}
 .caption { text-align: center; color: #6e6e6e; }
 .caption__span { color: #fc7254 }
 
