--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h3 { font-size: 45px }
 h4 { font-size: 44px }
 h5 { font-size: 43px }
 .header {
-  /* background-color: #f7f7f7; */
+  background-color: #f7f7f7;
   margin: 0;
   padding: 0;
   min-height: 530px;
@@ -19,9 +19,7 @@ h5 { font-size: 43px }
 
 /* ----- svg ----  */
 
-.svg-animation-main {
-  /* border: 1px solid #fc7254; */
-  /* background-color: #f7f7f7; */
+/* .svg-animation-main {
   background-color: #eee;
   width: 100%;
   height: 100%;
@@ -36,7 +34,7 @@ h5 { font-size: 43px }
   height: 100%;
   position: relative;
   z-index: 1
-}
+} */
 /* cat */
 .svg-animation-cat {
   width: 200px;
@@ -50,7 +48,7 @@ h5 { font-size: 43px }
   width: 100%;
   height: 100%;
   position: relative;
-  
+
 }
 
 /* ----------------- */
