--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h5 { font-size: 43px }
   z-index: 1
 } */
 /* cat */
-.svg-animation-cat {
+/* .svg-animation-cat {
   width: 200px;
   height: 200px;
   position: absolute;
@@ -49,7 +49,7 @@ h5 { font-size: 43px }
   height: 100%;
   position: relative;
 
-}
+} */
 
 /* ----------------- */
 
