--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,34 @@ h3 { font-size: 45px }
 h4 { font-size: 44px }
 h5 { font-size: 43px }
 .header {
-  background-color: #f7f7f7;
+  /* background-color: #f7f7f7; */
   margin: 0;
   padding: 0;
-  min-height: 530px;
+  height: 100vh;
   position: relative;
+  z-index: 1;
 }
+.header::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../img/greet-fone.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  opacity: .25;
+  z-index: -1;
+}
+
+
 /* ----------------- */
 
 .header-container { padding: 20px 0 }
@@ -186,8 +208,9 @@ h5 { font-size: 43px }
 .description {
   padding: 20px 0px;
   text-align: center;
-  color: #7b7b7b;
+  color: #5b5b5b;
   font-size: 19px;
+  font-weight: 600;
 }
 
 .fill {
@@ -417,7 +440,9 @@ h5 { font-size: 43px }
 /* ----------- oven ---------------- */
 
 
-.pan { padding: 50px 0 }
+.pan {
+  padding: 50px 0;
+}
 
 .card__container__pan {
   margin: 50px auto;
